syntax = "proto3";

package profile_v1;

option go_package = "rus-profile-test/pkg/profile_v1;profile_v1";

import "google/api/annotations.proto";

service Profiler {
  rpc find (FindRequest) returns (FindResponse){
    option (google.api.http) = {
      get: "/find/inn/{inn}"
    };
  };
}


message FindRequest {
  string inn = 1;
}

message FindResponse {
  string inn = 1;
  string kpp = 2;
  string companyName = 3;
  string directorName = 4;

}

